welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : String("R")
 required: Boolean
		else if ("R") { droite();avance();}
                         ^BDRBuggle:6: error: type mismatch;
 found   : String("L")
 required: Boolean
		else if ("L") { gauche();avance();}
                         ^BDRBuggle:7: error: type mismatch;
 found   : String("I")
 required: Boolean
		else if ("I") { droite();droite();avance();}
                         ^BDRBuggle:8: error: type mismatch;
 found   : String("A")
 required: Boolean
		else if ("A") { avance();}
                         ^BDRBuggle:9: error: type mismatch;
 found   : String("B")
 required: Boolean
		else if ("B") {avance();avance();}
                         ^BDRBuggle:10: error: type mismatch;
 found   : String("C")
 required: Boolean
		else if ("C") { avance();avance();avance();}
                         ^BDRBuggle:11: error: type mismatch;
 found   : String("Z")
 required: Boolean
		else if ("Z") { recule();}
                         ^BDRBuggle:12: error: type mismatch;
 found   : String("X")
 required: Boolean
		else if ("X") { recule();recule();}
                         ^BDRBuggle:13: error: type mismatch;
 found   : String("Y")
 required: Boolean
		else if ("Y") { recule();recule();recule();}
                         ^